--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "conta-ai-backend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "nodemon",
     "build": "tsc --project ./"
   },
   "keywords": [],
@@ -23,6 +23,19 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
+  },
+  "nodemonConfig": {
+    "ignore":
+      [
+        "build",
+        "node_modules"
+      ],
+    "watch": [
+      "src"
+    ],
+    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/index.ts",
+    "ext": "ts"
   }
 }
