--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "NODE_ENV=development nodemon",
     "build": "tsc --project ./"
   },
   "keywords": [],
@@ -12,14 +12,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mysql": "^2.15.17",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "express": "^4.17.1",
-    "joi": "^17.3.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
@@ -27,15 +26,19 @@
     "typescript": "^4.1.3"
   },
   "nodemonConfig": {
-    "ignore":
-      [
-        "build",
-        "node_modules"
-      ],
+    "ignore": [
+      "build",
+      "node_modules"
+    ],
     "watch": [
       "src"
     ],
     "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/index.ts",
     "ext": "ts"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "mysql": "^2.18.1"
   }
 }
